active/a1/sg.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: ALB with ASG Security Groups Stack
Parameters:
  Env:
    Type: String
  ContactInfo:
    Type: String
  ContactEmail:
    Type: String
  VPCInfo:
    Type: String
  BastionSG:
    Type: String

Resources:
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB Security Group
      VpcId: !Ref VPCInfo
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: '80'
          ToPort: '80'
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
          FromPort: '0'
          ToPort: '65535'
      Tags:
        - Key: Name
          Value: client-ALBSG
        - Key: ContactInfo
          Value: !Ref ContactInfo
        - Key: ContactEmail
          Value: !Ref ContactEmail
        - Key: Environment
          Value: !Ref Env
        - Key: Tool
          Value: CFN

  ASGSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ASG Security Group
      VpcId: !Ref VPCInfo
      SecurityGroupIngress:
        - IpProtocol: tcp
          SourceSecurityGroupId: !Ref ALBSG
          FromPort: '80'
          ToPort: '80'
        - IpProtocol: tcp
          SourceSecurityGroupId: !Ref BastionSG
          FromPort: '22'
          ToPort: '22'
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
          FromPort: '0'
          ToPort: '65535'
      Tags:
        - Key: Name
          Value: client-ASGSG
        - Key: ContactInfo
          Value: !Ref ContactInfo
        - Key: ContactEmail
          Value: !Ref ContactEmail
        - Key: Environment
          Value: !Ref Env
        - Key: Tool
          Value: CFN

Outputs:
  ALBSG:
    Description: ALB Security Group
    Value: !Ref ALBSG
  ASGSG:
    Description: ASG Security Group
    Value: !Ref ASGSG
